--- a/prj-monster-01-starting-setup/index.html
+++ b/prj-monster-01-starting-setup/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue Basics</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>
@@ -30,8 +27,8 @@
         </div>
       </section>
       <section id="controls">
-        <button @click='attackMonster'>ATTACK</button>
-        <button>SPECIAL ATTACK</button>
+        <button @click="attackMonster">ATTACK</button>
+        <button @click="specialAttackMonster">SPECIAL ATTACK</button>
         <button>HEAL</button>
         <button>SURRENDER</button>
       </section>
